[fix] : search-container z-index

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -356,7 +356,7 @@ hr {
 
 #search-container {
   position: fixed;
-  z-index: 10;
+  z-index: 999;
   left: 0;
   top: 0;
   width: 100vw;
